bin_PROGRAMS=dplgenrandkey dplgetcaps dplgetid dplputid dplheadid dpldelid dplcpid

dplgenrandkey_CFLAGS = $(DROPLET_CFLAGS) #-Wall -Werror
dplgenrandkey_LDADD = $(DROPLET_LIBS)
dplgenrandkey_SOURCES = \
	dplgenrandkey.c

dplgetcaps_CFLAGS = $(DROPLET_CFLAGS) #-Wall -Werror
dplgetcaps_LDADD = $(DROPLET_LIBS)
dplgetcaps_SOURCES = \
	dplgetcaps.c

dplgetid_CFLAGS = $(DROPLET_CFLAGS) #-Wall -Werror
dplgetid_LDADD = $(DROPLET_LIBS)
dplgetid_SOURCES = \
	dplgetid.c

dplputid_CFLAGS = $(DROPLET_CFLAGS) #-Wall -Werror
dplputid_LDADD = $(DROPLET_LIBS)
dplputid_SOURCES = \
	dplputid.c

dplheadid_CFLAGS = $(DROPLET_CFLAGS) #-Wall -Werror
dplheadid_LDADD = $(DROPLET_LIBS)
dplheadid_SOURCES = \
	dplheadid.c

dpldelid_CFLAGS = $(DROPLET_CFLAGS) #-Wall -Werror
dpldelid_LDADD = $(DROPLET_LIBS)
dpldelid_SOURCES = \
	dpldelid.c

dplcpid_CFLAGS = $(DROPLET_CFLAGS) #-Wall -Werror
dplcpid_LDADD = $(DROPLET_LIBS)
dplcpid_SOURCES = \
	dplcpid.c
