bin_PROGRAMS=dplgenrandkey dplgetcaps dplgetid dplputid dplheadid dpldelid dplcpid

dplgenrandkey_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplgenrandkey_LDADD = $(LIBDROPLET_LIBS)
dplgenrandkey_SOURCES = \
	dplgenrandkey.c

dplgetcaps_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplgetcaps_LDADD = $(LIBDROPLET_LIBS)
dplgetcaps_SOURCES = \
	dplgetcaps.c

dplgetid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplgetid_LDADD = $(LIBDROPLET_LIBS)
dplgetid_SOURCES = \
	dplgetid.c

dplputid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplputid_LDADD = $(LIBDROPLET_LIBS)
dplputid_SOURCES = \
	dplputid.c

dplheadid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplheadid_LDADD = $(LIBDROPLET_LIBS)
dplheadid_SOURCES = \
	dplheadid.c

dpldelid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dpldelid_LDADD = $(LIBDROPLET_LIBS)
dpldelid_SOURCES = \
	dpldelid.c

dplcpid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplcpid_LDADD = $(LIBDROPLET_LIBS)
dplcpid_SOURCES = \
	dplcpid.c
