bin_PROGRAMS=dplgenrandkey dplgetcaps dplgetid dplputid dplheadid dpldelid dplcpid dplget dplput dpllogin dpldelete

dplgenrandkey_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplgenrandkey_LDADD = $(LIBDROPLET_LIBS)
dplgenrandkey_SOURCES = \
	dplgenrandkey.c

dplgetcaps_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplgetcaps_LDADD = $(LIBDROPLET_LIBS)
dplgetcaps_SOURCES = \
	dplgetcaps.c

dplgetid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplgetid_LDADD = $(LIBDROPLET_LIBS)
dplgetid_SOURCES = \
	dplgetid.c

dplputid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplputid_LDADD = $(LIBDROPLET_LIBS)
dplputid_SOURCES = \
	dplputid.c

dplheadid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplheadid_LDADD = $(LIBDROPLET_LIBS)
dplheadid_SOURCES = \
	dplheadid.c

dpldelid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dpldelid_LDADD = $(LIBDROPLET_LIBS)
dpldelid_SOURCES = \
	dpldelid.c

dplcpid_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplcpid_LDADD = $(LIBDROPLET_LIBS)
dplcpid_SOURCES = \
	dplcpid.c

dplget_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplget_LDADD = $(LIBDROPLET_LIBS)
dplget_SOURCES = \
	dplget.c

dpldelete_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dpldelete_LDADD = $(LIBDROPLET_LIBS)
dpldelete_SOURCES = \
	dpldelete.c

dplput_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dplput_LDADD = $(LIBDROPLET_LIBS)
dplput_SOURCES = \
	dplput.c

dpllogin_CFLAGS = $(LIBDROPLET_CFLAGS) #-Wall -Werror
dpllogin_LDADD = $(LIBDROPLET_LIBS)
dpllogin_SOURCES = \
	dpllogin.c
